# ai-cdss-cli

./: README.md  pyproject.toml
src/ai_cdss_cli/: cli.py
