[project]
name = "ai-cdss-cli"
version = "0.1.2"
description = "CLI Tool to run AI-CDSS"
authors = [
    {name = "Eodyne Systems S.L."}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "rgs_interface @ git+https://github.com/dabadav/rgs-interface.git@v0.4.1",
    "ai_cdss @ git+https://github.com/dabadav/ai-cdss.git@v0.2.2",
    "typer (>=0.16.0,<0.17.0)",
]

[tool.poetry.scripts]
ai-cdss-cli = "ai_cdss_cli.cli:cli"

[tool.poetry]
packages = [{include = "ai_cdss_cli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
